--- a/src/app.html
+++ b/src/app.html
@@ -5,12 +5,12 @@
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <meta name="viewport" content="width=device-width" />
   <link
-   rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+   rel="stylesheet"
   />
   <style>
-   .error {
-    color: red;
+   body {
+    padding-top: 70px;
    }
   </style>
   %sveltekit.head%
